--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,7 @@ html5lib==1.1
 idna==3.4
 lxml==4.9.2
 oscrypto==1.3.0
-Pillow==9.4.0
+Pillow
 pycparser==2.21
 pyHanko==0.17.0
 pyhanko-certvalidator==0.20.0
@@ -32,7 +32,7 @@ PyQRCode==1.2.1
 python-bidi==0.4.2
 pytz==2022.7.1
 pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
+PyYAML
 qrcode==7.4.2
 redis==4.5.1
 reportlab==3.6.12
