--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
-gunicorn
-faiss-cpu
 annotated-types==0.7.0
 anyio==4.10.0
 arabic-reshaper==3.0.0
-sentence-transformers
 asgiref==3.9.1
 asn1crypto==1.5.1
 async-timeout==4.0.3
@@ -29,11 +26,14 @@ django-crispy-forms==2.4
 django-rest-framework==0.1.0
 djangorestframework==3.16.1
 exceptiongroup==1.3.0
+faiss-cpu==1.13.2
 filelock==3.19.1
 fonttools==4.59.1
+freetype-py==2.5.1
 frozenlist==1.7.0
 fsspec==2025.7.0
 greenlet==3.2.4
+gunicorn==23.0.0
 h11==0.16.0
 html5lib==1.1
 httpcore==1.0.9
@@ -41,26 +41,40 @@ httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.34.4
 idna==3.10
+Jinja2==3.1.6
+joblib==1.5.3
 jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.9
-langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
+langchain==1.2.3
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.2.7
 langchain-huggingface==0.3.1
-langchain-text-splitters==0.3.9
+langchain-ollama==1.0.1
+langchain-text-splitters==1.1.0
+langgraph==1.0.2
+langgraph-checkpoint==3.0.0
+langgraph-prebuilt==1.0.2
+langgraph-sdk==0.2.9
 langsmith==0.4.15
 lxml==6.0.0
+MarkupSafe==3.0.3
 marshmallow==3.26.1
 matplotlib==3.10.5
+mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
+networkx==3.4.2
 numpy==2.2.6
+ollama==0.6.1
 orjson==3.11.2
+ormsgpack==1.11.0
 oscrypto==1.3.0
 packaging==25.0
 pillow==11.3.0
 propcache==0.3.2
+pycairo==1.28.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
@@ -77,31 +91,45 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 PyYAML==6.0.2
 qrcode==8.2
+regex==2025.11.3
 reportlab==4.4.3
 requests==2.32.5
 requests-toolbelt==1.0.0
+rlPyCairo==0.4.0
+safetensors==0.7.0
+scikit-learn==1.7.2
+scipy==1.15.3
+sentence-transformers==5.2.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 SQLAlchemy==2.0.43
 sqlparse==0.5.3
+style==1.1.0
 svglib==1.5.1
+sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tinycss2==1.4.0
 tinyhtml5==2.0.0
 tokenizers==0.21.4
+torch==2.9.1
 tqdm==4.67.1
+transformers==4.55.4
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 tzlocal==5.3.1
+update==0.0.1
 uritools==5.0.0
 urllib3==2.5.0
+uuid_utils==0.12.0
 weasyprint==66.0
 webencodings==0.5.1
 whitenoise==6.9.0
 xhtml2pdf==0.2.17
+xxhash==3.6.0
 yarl==1.20.1
 zopfli==0.2.3.post1
 zstandard==0.24.0
